# SeekCytometer-Peripheral

./: .gitignore  README.md
PZT/: .mxproject  PZT.ioc
PZT/Core/Inc/: MCP4728.h  bsp_simu_i2c.h  dcdc_power_ctrl.h  flash.h  interface.h  main.h  pzt_current_check.h  pzt_quantity_check.h  step_motor_driver.h  stm32f4xx_it.h  tim.h  time.h
PZT/Core/Inc/modbus/: mb.h  mbconfig.h  mbport.h
PZT/Core/Src/: MCP4728.c  adc.c  bsp_simu_i2c.c  dcdc_power_ctrl.c  flash.c  gpio.c  interface.c  main.c  pzt_current_check.c  pzt_quantity_check.c  step_motor_driver.c  stm32f4xx_it.c  tim.c  time.c  usart.c
PZT/Core/Src/modbus/: mb.c  mbcrc.c  mbfunccoils.c  mbfuncdisc.c  mbfuncholding.c  mbfuncinput.c  mbfuncother.c  mbrtu.c  mbutils.c  port.c
SeekCytometer_Peripheral/: .gitignore  ArrowButton.cpp  ArrowButton.h  CMakeLists.txt  MFCParasSetWidget.cpp  MFCParasSetWidget.h  MainWindow.cpp  MainWindow.h  MicroFluidicWidget.cpp  MicroFluidicWidget.h  ModbusMaster.cpp  ModbusMaster.h  ModbusRegistersTable.h  OpticsControlWidget.cpp  OpticsControlWidget.h  PZTCtrlWidget.cpp  PZTCtrlWidget.h  SampleChipWidget.cpp  SampleChipWidget.h  SampleParaWidget.cpp  SampleParaWidget.h  SerialPortConfigWidget.cpp  SerialPortConfigWidget.h  StatusLight.cpp  StatusLight.h  TempControlWidget.cpp  TempControlWidget.h  ToggleRunButton.cpp  ToggleRunButton.h  ToggleSwitch.cpp  ToggleSwitch.h  main.cpp  resource.qrc
adc_comm/: adc_comm.ioc
adc_comm/Core/Inc/: bsp_uart.h  dac8568.h  debug_commands.h  debug_shell.h  main.h  modbus_gateway.h  modbus_master.h  modbus_slave.h  sample_control.h  stm32f4xx_it.h
adc_comm/Core/Src/: bsp_uart.c  dac8568.c  debug_commands.c  dma.c  freertos.c  gpio.c  main.c  modbus_gateway.c  modbus_local_table.c  modbus_master.c  modbus_slave.c  sample_control.c  spi.c  stm32f4xx_it.c  tim.c  usart.c
mfc_ctrl/: .mxproject  mfc_ctrl.ioc
mfc_ctrl/Core/Inc/: FreeRTOSConfig.h  bsp_gpio.h  bsp_spi.h  bsp_tim.h  bsp_uart.h  dac8568.h  debug_shell.h  hsc_conv.h  hsc_spi.h  main.h  modbus_defs.h  modbus_slave.h  pid.h  press_control.h  propo_valve_drive.h  shell_commands_register.h  sol_valve_control.h  stm32f4xx_it.h
mfc_ctrl/Core/Src/: bsp_uart.c  dac8568.c  freertos.c  gpio.c  hsc_conv.c  hsc_spi.c  main.c  modbus_local_table.c  modbus_slave.c  pid.c  press_control.c  propo_valve_drive.c  shell_commands_register.c  sol_valve_control.c  spi.c  stm32f4xx_it.c  usart.c
motor_ctrl/: .mxproject  motor_ctrl.ioc
motor_ctrl/Core/Inc/: FreeRTOSConfig.h  bsp_adc.h  bsp_gpio.h  bsp_tim.h  bsp_uart.h  churn_control.h  churn_motor_control.h  cover_control.h  dc_motor.h  hr4988.h  laser_control.h  led_control.h  main.h  mcp4728.h  modbus_defs.h  modbus_master.h  modbus_slave.h  ntc_sensor.h  pid.h  seal_control.h  stepper_motor_control.h  stepper_motor_protocol.h  stm32f4xx_it.h  temperature_control.h  tim.h
motor_ctrl/Core/Src/: adc.c  bsp_adc.c  bsp_uart.c  churn_control.c  cover_control.c  dc_motor.c  debug_shell.c  dma.c  freertos.c  gpio.c  hr4988.c  laser_control.c  led_control.c  main.c  mcp4728.c  modbus_local_table.c  modbus_master.c  modbus_slave.c  ntc_sensor.c  pid.c  seal_control.c  shell_commands_register.c  stepper_motor_control.c  stm32f4xx_it.c  temperature_control.c  tim.c  usart.c
